<resources>
    <string name="app_name">Vs-fabianu-webservices</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="title_activity_rest">RestActivity</string>
    <string name="temperature_text">The temperature is: %1$.2f°C</string>
    <string name="rawButton_text">Send Raw Request</string>
    <string name="htmlButton_text">Send HTML Request</string>
    <string name="jsonButton_text">Send JSON Request</string>
    <string name="ip_label">IP</string>
    <string name="port_label">Port</string>
    <string name="startServer_text">Start Server</string>
    <string name="stopServer_text">Stop Server</string>
    <string name="title_activity_server">Server</string>
    <string name="title_activity_soap">SOAP</string>

</resources>
