<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ch.ethz.inf.vs.vs_fabianu_webservices.RestActivity">

    <Button android:id="@+id/raw_button"
        android:text="@string/rawButton_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickRaw"/>

    <Button android:id="@+id/html_button"
        android:text="@string/htmlButton_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickHtml"/>

    <Button android:id="@+id/json_button"
        android:text="@string/jsonButton_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickJson"/>

    <TextView android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
